# ChangeLog for kde-misc/tellico
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.34 2006/03/07 23:32:01 carlo Exp $

*tellico-1.1.2 (07 Mar 2006)

  07 Mar 2006; Carsten Lohrke <carlo@gentoo.org> +tellico-1.1.2.ebuild:
  Version bump.

  22 Feb 2006; Mark Loeser <halcy0n@gentoo.org> tellico-1.1.1.ebuild:
  Back to ~x86

*tellico-1.1.1 (21 Feb 2006)

  21 Feb 2006; Carsten Lohrke <carlo@gentoo.org> +tellico-1.1.1.ebuild:
  Version bump.

  12 Feb 2006; Mark Loeser <halcy0n@gentoo.org> tellico-1.1.ebuild:
  Back to ~x86

*tellico-1.1 (12 Feb 2006)

  12 Feb 2006; Carsten Lohrke <carlo@gentoo.org> +tellico-1.1.ebuild:
  Version bump.

*tellico-1.0.2 (12 Oct 2005)

  12 Oct 2005; Carsten Lohrke <carlo@gentoo.org> +tellico-1.0.2.ebuild:
  version bump

*tellico-1.0.1 (24 Sep 2005)

  24 Sep 2005; Carsten Lohrke <carlo@gentoo.org> +tellico-1.0.1.ebuild:
  version bump

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> tellico-0.13.8.ebuild:
  Stable on ppc.

  22 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> tellico-0.13.8.ebuild:
  Stable on sparc

  20 Aug 2005; Gregorio Guidi <greg_g@gentoo.org> tellico-0.13.8.ebuild:
  Stable on x86.

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> tellico-0.13.7.ebuild:
  Stable on ppc.

*tellico-0.13.8 (03 Jul 2005)

  03 Jul 2005; Carsten Lohrke <carlo@gentoo.org> +tellico-0.13.8.ebuild:
  version bump

  27 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> tellico-0.13.7.ebuild:
  Stable on sparc

  27 Jun 2005; Carsten Lohrke <carlo@gentoo.org> tellico-0.13.7.ebuild:
  stable on x86

  06 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> tellico-0.13.6.ebuild:
  Stable on sparc

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> tellico-0.13.6.ebuild:
  Stable on ppc.

  27 May 2005; Carsten Lohrke <carlo@gentoo.org> tellico-0.13.6.ebuild:
  stable on x86

*tellico-0.13.7 (27 May 2005)
