@@ -1,14 +1,16 @@
-MD5 366eb8700d91d89d867e535f59f28174 ChangeLog 4071
+MD5 37d0c36d194b8b8b2b5e94ce9ef49f53 ChangeLog 4190
 MD5 31393b53f07a7c3549818f83deaf7347 files/digest-tellico-0.13.8 67
 MD5 5b60965cffd2a5573ce2f307d1be7757 files/digest-tellico-1.0.1 66
 MD5 6045fd6d740eb50cb2308f3bab5d31e3 files/digest-tellico-1.0.2 66
 MD5 562e08f808d1b80de1655c4dec047a14 files/digest-tellico-1.1 64
 MD5 614a360b16e7ab3a56cbb38dd343dc63 files/digest-tellico-1.1.1 66
 MD5 bde643ba5f3a75ac1568dfeb08e6afab files/digest-tellico-1.1.2 66
+MD5 5f55b1567cbea11cea3402cd8fb3cbdb files/digest-tellico-1.1.3 66
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 MD5 08d89bdd9cf15f77618a9642179a81cc tellico-0.13.8.ebuild 639
 MD5 bdfaddba74fd3d4b7a0c3612a3cd029c tellico-1.0.1.ebuild 737
 MD5 0d39c979c44afe58b16f990e046767dd tellico-1.0.2.ebuild 737
 MD5 89d69c54618592bef471c65d6153c7a4 tellico-1.1.1.ebuild 1682
 MD5 379672caa93886887d022b1473cd415b tellico-1.1.2.ebuild 1680
+MD5 89d69c54618592bef471c65d6153c7a4 tellico-1.1.3.ebuild 1682
 MD5 19c2d2ea998bc59838ff85013f01e3c4 tellico-1.1.ebuild 1680
