@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/tellico
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.34 2006/03/07 23:32:01 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.35 2006/03/13 17:56:02 carlo Exp $
+
+*tellico-1.1.3 (13 Mar 2006)
+
+  13 Mar 2006; Carsten Lohrke <carlo@gentoo.org> +tellico-1.1.3.ebuild:
+  Version bump.
 
 *tellico-1.1.2 (07 Mar 2006)
 
